--- a/html-css/week1/week1.html
+++ b/html-css/week1/week1.html
@@ -19,9 +19,9 @@
         <li><strong>Email :</strong>hamoudi@galleripulsart.dk</li>
       </ul>
       <ul class="special">
-        <li><img src="icon.png" class="icon" /> teamplayer</li>
-        <li><img src="icon.png" class="icon" />driven</li>
-        <li><img src="icon.png" class="icon" />flexible</li>
+        <li><img src="icon.png" class="icon" alt="icon" /> teamplayer</li>
+        <li><img src="icon.png" class="icon" alt="icon" />driven</li>
+        <li><img src="icon.png" class="icon" alt="icon" />flexible</li>
       </ul>
     </div>
     <div class="rightside">
