javascript1-week1-HW modified

--- a/javascript/javascript1/week1/index.html
+++ b/javascript/javascript1/week1/index.html
@@ -7,6 +7,6 @@
     <title>smart-ease.io</title>
   </head>
   <body>
-    <script src="week1.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
