JS2 Week 1 HW before the merge

--- a/javascript/javascript2/week1/first-part/index.html
+++ b/javascript/javascript2/week1/first-part/index.html
@@ -7,6 +7,7 @@
     <title>Home Work 3 JS1</title>
     <link rel="stylesheet" href="style.css" />
   </head>
+  <!-- before the merge   -->
   <body>
     <input type="text" id="username" />
     <button id="button">Find your spirit animal</button>
