--- a/javascript/javascript2/week1/hyf-bay/index.html
+++ b/javascript/javascript2/week1/hyf-bay/index.html
@@ -7,6 +7,7 @@
     rel="stylesheet"
   />
 </head>
+<!-- before the merge -->
 <body>
   <main id="maintag"></main>
   <script src="hyfBayHelpers.js"></script>
